--- a/app/index.html
+++ b/app/index.html
@@ -88,12 +88,12 @@
 
                 <section data-route="about">
                 </section>
-                <template is="dom-if" if="[[isUserAdmin(userRole)]]">
+                <!--<template is="dom-if" if="[[isUserAdmin(userRole)]]">-->
                     <section data-route="users">
                         <user-collection><user-collection>
                     </section>
 
-                </template>
+                <!--</template>-->
 
             </iron-pages>
         </div>
